--- a/package.json
+++ b/package.json
@@ -1,31 +1,20 @@
 {
-  "name": "gatitoapi",
+  "name": "api-petshop",
   "version": "1.0.0",
-  "description": "API de PetShop",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "nodemon index.js",
     "start": "node api/index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NelsonSSoares/gatitoPetShop-API.git"
-  },
-  "author": "Nelson de Sousa",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/NelsonSSoares/gatitoPetShop-API/issues"
-  },
-  "homepage": "https://github.com/NelsonSSoares/gatitoPetShop-API#readme",
   "dependencies": {
-    "body-parser": "^1.19.1",
-    "config": "^3.3.7",
-    "express": "^4.17.2",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.15.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
+    "body-parser": "^1.19.0",
+    "config": "^3.3.1",
+    "express": "^4.17.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^6.2.4"
   }
 }
